refactor: atualiza rotas de autenticação para '/auth/login' e '/auth/signup' e adiciona validação de usuário responsável na criação de jobs
